adding last version of project

--- a/Homelessness_Study5.ipynb
+++ b/Homelessness_Study5.ipynb
@@ -25,8 +25,7 @@
       "collapsed_sections": [
         "Z85j4aqC-RTU",
         "RMP8E90yOZZW",
-        "mPyFwxV6zwZA",
-        "a7HDsXnrBDQr"
+        "mPyFwxV6zwZA"
       ]
     }
   },
@@ -1536,7 +1535,8 @@
       "source": [
         "### Conclusion:\n",
         "\n",
-        "Here is link to the project presentation. "
+        "Here is link to the project presentation. \n",
+        "https://github.com/MBouchaqour/homelessness_project/blob/main/data/Project_Presentation.pptx"
       ],
       "metadata": {
         "id": "pMk0R8V_kDBG"
